src/manifests/todos-app/all-no-istio.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: todos-db
  labels:
    app: todos-db
    version: 1.0.0
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
      name: tcp
  selector:
    app: todos-db
    version: 1.0.0
---
apiVersion: v1
kind: Service
metadata:
  name: todos-mysql
  labels:
    app: todos-mysql
    version: 1.0.0
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: todos-mysql
    version: 1.0.0
---
apiVersion: v1
kind: Service
metadata:
  name: todos-webui
  labels:
    app: todos-webui
    version: 1.0.0
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      targetPort: 8080
      port: 8080
  selector:
    app: todos-webui
    version: 1.0.0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-db
  labels:
    app: todos-db
    version: 1.0.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todos-db
      version: 1.0.0
  template:
    metadata:
      labels:
        app: todos-db
        version: 1.0.0
    spec:
      serviceAccountName: todos-sa
      containers:
        - name: todos-db
          image: registry.redhat.io/rhel8/mysql-80:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: tcp
              containerPort: 3306
              protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-mysql
  labels:
    app: todos-mysql
    version: 1.0.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todos-mysql
      version: 1.0.0
  template:
    metadata:
      labels:
        app: todos-mysql
        version: 1.0.0
    spec:
      serviceAccountName: todos-sa
      containers:
        - name: todos-mysql
          image: quay.io/corbsmartin/todos-mysql:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-webui
  labels:
    app: todos-webui
    version: 1.0.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todos-webui
      version: 1.0.0
  template:
    metadata:
      labels:
        app: todos-webui
        version: 1.0.0
    spec:
      serviceAccountName: todos-sa
      containers:
        - name: todos-webui
          image: quay.io/corbsmartin/todos-webui:1.0.1
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
