src/manifests/todos-app/all.yaml
---
# Source: todos-app/templates/todos-db/todos-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todos-db
  labels:
    helm.sh/chart: todos-app-0.1.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: todos-v1
    app.kubernetes.io/name: todos-db
    app.kubernetes.io/version: 1.0.0
    app: todos-db
    version: 1.0.0
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
      name: tcp
  selector:
    app.kubernetes.io/instance: todos-v1
    app.kubernetes.io/name: todos-db
    app.kubernetes.io/version: 1.0.0
    app: todos-db
    version: 1.0.0
---
# Source: todos-app/templates/todos-mysql/todos-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todos-mysql
  labels:
    helm.sh/chart: todos-app-0.1.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: todos-v1
    app.kubernetes.io/name: todos-mysql
    app.kubernetes.io/version: 1.0.0
    app: todos-mysql
    version: 1.0.0
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/instance: todos-v1
    app.kubernetes.io/name: todos-mysql
    app.kubernetes.io/version: 1.0.0
    app: todos-mysql
    version: 1.0.0
---
# Source: todos-app/templates/todos-webui/todos-webui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todos-webui
  labels:
    helm.sh/chart: todos-app-0.1.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: todos-v1
    app.kubernetes.io/name: todos-webui
    app.kubernetes.io/version: 1.0.0
    app: todos-webui
    version: 1.0.0
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      targetPort: 8080
      port: 8080
  selector:
    app.kubernetes.io/instance: todos-v1
    app.kubernetes.io/name: todos-webui
    app.kubernetes.io/version: 1.0.0
    app: todos-webui
    version: 1.0.0
---
# Source: todos-app/templates/todos-db/todos-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-db
  labels:
    helm.sh/chart: todos-app-0.1.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: todos-v1
    app.kubernetes.io/name: todos-db
    app.kubernetes.io/version: 1.0.0
    app: todos-db
    version: 1.0.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: todos-v1
      app.kubernetes.io/name: todos-db
      app.kubernetes.io/version: 1.0.0
      app: todos-db
      version: 1.0.0
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app.kubernetes.io/instance: todos-v1
        app.kubernetes.io/name: todos-db
        app.kubernetes.io/version: 1.0.0
        app: todos-db
        version: 1.0.0
    spec:
      serviceAccountName: todos-sa
      containers:
        - name: todos-db
          image: registry.redhat.io/rhel8/mysql-80:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: tcp
              containerPort: 3306
              protocol: TCP
---
# Source: todos-app/templates/todos-mysql/todos-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-mysql
  labels:
    helm.sh/chart: todos-app-0.1.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: todos-v1
    app.kubernetes.io/name: todos-mysql
    app.kubernetes.io/version: 1.0.0
    app: todos-mysql
    version: 1.0.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: todos-v1
      app.kubernetes.io/name: todos-mysql
      app.kubernetes.io/version: 1.0.0
      app: todos-mysql
      version: 1.0.0
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app.kubernetes.io/instance: todos-v1
        app.kubernetes.io/name: todos-mysql
        app.kubernetes.io/version: 1.0.0
        app: todos-mysql
        version: 1.0.0
    spec:
      serviceAccountName: todos-sa
      containers:
        - name: todos-mysql
          image: quay.io/corbsmartin/todos-mysql:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
---
# Source: todos-app/templates/todos-webui/todos-webui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-webui
  labels:
    helm.sh/chart: todos-app-0.1.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: todos-v1
    app.kubernetes.io/name: todos-webui
    app.kubernetes.io/version: 1.0.0
    app: todos-webui
    version: 1.0.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: todos-v1
      app.kubernetes.io/name: todos-webui
      app.kubernetes.io/version: 1.0.0
      app: todos-webui
      version: 1.0.0
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app.kubernetes.io/instance: todos-v1
        app.kubernetes.io/name: todos-webui
        app.kubernetes.io/version: 1.0.0
        app: todos-webui
        version: 1.0.0
    spec:
      serviceAccountName: todos-sa
      containers:
        - name: todos-webui
          image: quay.io/corbsmartin/todos-webui:1.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
