src/manifests/todos-app/todos-app.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: todos-db
  labels:
    app.kubernetes.io/name: todos-db
    app.kubernetes.io/version: 1.0.0
    app: todos-db
    version: 1.0.0
spec:
  type: ClusterIP
  ports:
    - port: 3306
      name: tcp
  selector:
    app.kubernetes.io/name: todos-db
    app.kubernetes.io/version: 1.0.0
    app: todos-db
    version: 1.0.0
---
apiVersion: v1
kind: Service
metadata:
  name: todos-mysql
  labels:
    app.kubernetes.io/name: todos-mysql
    app.kubernetes.io/version: 1.0.0
    app: todos-mysql
    version: 1.0.0
spec:
  type: ClusterIP
  ports:
    - port: 8080
      name: http
  selector:
    app.kubernetes.io/name: todos-mysql
    app.kubernetes.io/version: 1.0.0
    app: todos-mysql
    version: 1.0.0
---
apiVersion: v1
kind: Service
metadata:
  name: todos-webui
  labels:
    app.kubernetes.io/name: todos-webui
    app.kubernetes.io/version: 1.0.0
    app: todos-webui
    version: 1.0.0
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
  selector:
    app.kubernetes.io/name: todos-webui
    app.kubernetes.io/version: 1.0.0
    app: todos-webui
    version: 1.0.0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-db
  labels:
    app.kubernetes.io/name: todos-db
    app.kubernetes.io/version: 1.0.0
    app: todos-db
    version: 1.0.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: todos-db
      app.kubernetes.io/version: 1.0.0
      app: todos-db
      version: 1.0.0
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app.kubernetes.io/name: todos-db
        app.kubernetes.io/version: 1.0.0
        app: todos-db
        version: 1.0.0
    spec:
      serviceAccountName: todos-sa
      containers:
        - name: todos-db
          image: registry.redhat.io/rhel8/mysql-80:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: tcp
              containerPort: 3306
              protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-mysql
  labels:
    app.kubernetes.io/name: todos-mysql
    app.kubernetes.io/version: 1.0.0
    app: todos-mysql
    version: 1.0.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: todos-mysql
      app.kubernetes.io/version: 1.0.0
      app: todos-mysql
      version: 1.0.0
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app.kubernetes.io/name: todos-mysql
        app.kubernetes.io/version: 1.0.0
        app: todos-mysql
        version: 1.0.0
    spec:
      serviceAccountName: todos-sa
      containers:
        - name: todos-mysql
          image: quay.io/corbsmartin/todos-mysql:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-webui
  labels:
    app.kubernetes.io/name: todos-webui
    app.kubernetes.io/version: 1.0.0
    app: todos-webui
    version: 1.0.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: todos-webui
      app.kubernetes.io/version: 1.0.0
      app: todos-webui
      version: 1.0.0
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app.kubernetes.io/name: todos-webui
        app.kubernetes.io/version: 1.0.0
        app: todos-webui
        version: 1.0.0
    spec:
      serviceAccountName: todos-sa
      containers:
        - name: todos-webui
          image: quay.io/corbsmartin/todos-webui:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
